# SpecReK_file-discovery

./: LICENSE  pyproject.toml  readme.md
.github/workflows/: tests.yml
implementation/: specrek_file_discovery_refactor_plan.md
src/file_discovery/: __init__.py  api.py  compute_new_path.py  config.py  detection_utils.py  io_utils.py  parsing_util.py  path_utils.py  purging_utils.py  restructure.py  validate.py  verify_paths.py
test/: conftest.py  test_discovery.py  test_io_utils.py  test_new_path_computation.py  test_parsing.py  test_restructure.py  test_validate.py  test_verify_paths.py
tests/: __init__.py  conftest.py  helpers.py
tests/integration/: test_create_new_path.py  test_discover.py  test_restructure.py  test_verify.py
tests/unit/: test_detection_utils.py  test_io_utils.py  test_parsing_util.py  test_path_utils.py  test_project_metadata.py  test_public_csv_api.py  test_purging_utils.py  test_validate.py
