[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "file_discovery"
version = "1.9.5"
description = "Discovery and inbox workflow for SpecReK measurement files."
readme = "readme.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Moritz Kleybolte" }
]
dependencies = [
  "pandas>=2.1"
]

[project.optional-dependencies]
test = [
  "pytest>=8",
]

# Optional but nice: keywords + classifiers
keywords = ["files", "discovery", "registry", "pandas"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["file_discovery*"]

[tool.setuptools.package-data]
file_discovery = ["py.typed"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
]
xfail_strict = true
filterwarnings = ["error"]
markers = [
  "integration: tests that exercise public API workflows and filesystem effects",
]
