[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "file_discovery"
version = "1.9.7-alpha"
description = "Discovery and inbox workflow for SpecReK measurement files."
readme = "readme.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Moritz Kleybolte" }
]
dependencies = [
  "pandas>=2.1"
]
keywords = ["files", "discovery", "registry", "pandas"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/Schubert-group-Digital-Automatization/SpecReK_file-discovery"
Repository = "https://github.com/Schubert-group-Digital-Automatization/SpecReK_file-discovery"
Issues = "https://github.com/Schubert-group-Digital-Automatization/SpecReK_file-discovery/issues"

[project.optional-dependencies]
test = [
  "pytest>=8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["file_discovery*"]

[tool.setuptools.package-data]
file_discovery = ["py.typed"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
]
xfail_strict = true
filterwarnings = ["error"]
markers = [
  "integration: tests that exercise public API workflows and filesystem effects",
]
